# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/account/profile": {
+        "/api/v1/account/profile": {
             "get": {
                 "security": [
                     {
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/admin/products": {
+        "/api/v1/admin/products": {
             "get": {
                 "security": [
                     {
@@ -187,7 +187,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "description": "Authenticates a user with email and password. Sets access-token, refresh-token, and refresh-token-id cookies on success.",
                 "consumes": [
@@ -240,7 +240,7 @@
                 }
             }
         },
-        "/auth/logout": {
+        "/api/v1/auth/logout": {
             "post": {
                 "security": [
                     {
@@ -283,7 +283,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/api/v1/auth/register": {
             "post": {
                 "description": "Creates a new user account and returns user data. Sets access-token, refresh-token, and refresh-token-id cookies.",
                 "consumes": [
